[package]
name = "axum-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
opentelemetry = { version = "0.28.0", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.28.0", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.28.0", features = ["http-proto", "reqwest-blocking-client", "metrics", "trace"] }

[dev-dependencies]
cargo-watch = "8.4.0"
